# Boost_task_scheduler

./: .gitignore  CMakeLists.txt  README.md
docker/: kafka-compose.yml
src/: main.cpp  task_scheduler.cpp
src/kafka/: kafka_consumer.cpp
src/scheduler/: task_scheduler.cpp  task_scheduler.hpp
